fix(api): harden Supabase auth and add vercel config for production deploy
- Require SUPABASE_SERVICE_ROLE_KEY in _supabaseServer (remove anon fallback)
- Add vercel.json with Node 20 runtime for serverless functions
- Document env vars for Vercel in DEVOPS_SECRETS.md

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,10 @@ REALTIME_SOCKET_URL=
 MAPS_PROVIDER=
 MAPS_API_KEY=
 DNS_POLICY_API_BASE_URL=
+DNS_VALIDATION_BLOCKED_DOMAIN=pornhub.com
 DNS_PROVIDER_DEFAULT=cleanbrowsing
+NEXTDNS_PROFILE_ID=
+NEXTDNS_API_KEY=
 FEATURE_REALTIME_LOCATION=true
 FEATURE_DOH_ENGINE=true
 FEATURE_CHILD_ANTITAMPER=true
@@ -17,3 +20,4 @@ FEATURE_CHILD_ANTITAMPER=true
 # Server-side only
 ONESIGNAL_REST_API_KEY=
 REVENUECAT_WEBHOOK_SECRET=
+SUPABASE_SERVICE_ROLE_KEY=
