--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,3 +38,9 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
+# Release signing (preencher para gerar APK/AAB assinado)
+# MYAPP_UPLOAD_STORE_FILE=upload-key.keystore
+# MYAPP_UPLOAD_KEY_ALIAS=upload-key
+# MYAPP_UPLOAD_STORE_PASSWORD=
+# MYAPP_UPLOAD_KEY_PASSWORD=
+
