--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "check:env": "node scripts/check-env.js",
     "check:env:strict": "node scripts/check-env.js --strict",
+    "icons:generate": "node scripts/generate-app-icons.js",
     "start:reset": "react-native start --reset-cache",
     "android": "react-native run-android",
     "android:emulator-fix": "./scripts/fix-android-emulator.sh",
@@ -22,6 +23,7 @@
     "@react-navigation/native-stack": "^7.13.0",
     "@sentry/react-native": "^8.1.0",
     "@supabase/supabase-js": "^2.97.0",
+    "crypto-js": "^4.2.0",
     "lottie-react-native": "^7.3.6",
     "lucide-react-native": "^0.575.0",
     "nativewind": "^4.2.2",
@@ -53,6 +55,7 @@
     "@react-native/eslint-config": "0.76.6",
     "@react-native/metro-config": "0.76.6",
     "@react-native/typescript-config": "0.76.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
@@ -60,6 +63,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19",
     "typescript": "5.0.4"
   },
