feat(play-store): corrige fluxo Parent/Child ID e prepara go-live
- currentChildService: pai usa childId do filho selecionado para location/dispatch
- pairingService: getParentPairingToken, deriveChildIdFromPairToken, getSelectedChildId
- childrenProfilesService: childId em ChildProfile, addChildProfileFromPairing
- PairingScreen: registra pareamento em Supabase via api/pairing/register
- PairingDeepLinkHandler + App: tag OneSignal child_id no dispositivo da criança
- ChildrenManagementScreen: seleção de filho para monitoramento
- oneSignalService: setChildIdTag para alertas
- api/pairing/register: endpoint POST para family_children
- pairingSyncService: registro de pareamento no servidor
- docs: ANDROID_RELEASE_SIGNING, DATA_SAFETY_PLAY_STORE, PRIVACY_POLICY_TEMPLATE
- gradle.properties: comentários atualizados para keystore de release

Made-with: Cursor

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,9 +38,10 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
-# Release signing (preencher para gerar APK/AAB assinado)
+# Release signing - See docs/ANDROID_RELEASE_SIGNING.md
+# Uncomment and fill before bundleRelease for Play Store upload
 # MYAPP_UPLOAD_STORE_FILE=upload-key.keystore
 # MYAPP_UPLOAD_KEY_ALIAS=upload-key
-# MYAPP_UPLOAD_STORE_PASSWORD=
-# MYAPP_UPLOAD_KEY_PASSWORD=
+# MYAPP_UPLOAD_STORE_PASSWORD=your_password
+# MYAPP_UPLOAD_KEY_PASSWORD=your_password
 
