--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "4.10.0",
     "react-native-svg": "^15.15.3",
+    "react-native-webview": "^13.16.0",
+    "react-native-webview-crypto": "^0.0.28",
     "socket.io-client": "^4.8.3",
     "suncalc": "^1.9.0"
   },
