--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,11 +12,17 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
 
     <queries>
         <intent>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
         </intent>
     </queries>
 
@@ -47,17 +53,16 @@
             <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="sentinela" android:host="pair" />
         </intent-filter>
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data
+                android:scheme="sentinela"
+                android:host="auth"
+                android:pathPrefix="/callback" />
+        </intent-filter>
       </activity>
-
-      <service
-          android:name=".SentinelaVpnService"
-          android:permission="android.permission.BIND_VPN_SERVICE"
-          android:foregroundServiceType="connectedDevice"
-          android:exported="true">
-          <intent-filter>
-              <action android:name="android.net.VpnService" />
-          </intent-filter>
-      </service>
 
       <service
           android:name=".SentinelaAccessibilityService"
